# CodexMonitor

./: package-lock.json  package.json
.github/workflows/: build-windows-manual.yml  release.yml
scripts/: macos-fix-openssl.sh  pull-build.ps1
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/local_dependencies/whisper-rs/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
src-tauri/src/: codex_installer.rs  lib.rs  state.rs  terminal.rs  tray.rs  types.rs
src-tauri/src/backend/: app_server.rs
src-tauri/src/codex/: mod.rs
src-tauri/src/dictation/: mod.rs  stub.rs
src-tauri/src/remote_backend/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/shared/: chat_bridge.rs  codex_core.rs  codex_installer.rs  git_rpc.rs  mod.rs  workspace_rpc.rs
src-tauri/src/shared/chat_bridge/: translate.rs
src-tauri/src/shared/workspaces_core/: io.rs
src-tauri/src/tailscale/: mod.rs
src/features/app/components/: CodexInstallGuide.tsx  MainApp.tsx
src/features/layout/hooks/: useUiScaleShortcuts.ts
src/features/models/hooks/: useModels.ts
src/features/models/utils/: modelListResponse.ts
src/features/settings/components/: SettingsNav.tsx  SettingsView.test.tsx  SettingsView.tsx  settingsViewHelpers.ts
src/features/settings/components/sections/: SettingsAboutSection.tsx  SettingsAgentsSection.tsx  SettingsCodexSection.tsx  SettingsComposerSection.tsx  SettingsDictationSection.tsx  SettingsDisplaySection.test.tsx  SettingsDisplaySection.tsx  SettingsEnvironmentsSection.tsx  SettingsFeaturesSection.tsx  SettingsGitSection.tsx  SettingsOpenAppsSection.tsx  SettingsProjectsSection.tsx  SettingsProviderSection.tsx  SettingsServerSection.tsx  SettingsShortcutsSection.tsx
src/features/settings/hooks/: useAppSettings.ts  useSettingsCodexSection.ts  useSettingsDefaultModels.ts  useSettingsProjectsSection.ts
src/features/shared/components/: FileEditorCard.tsx
src/features/workspaces/hooks/: useWorkspaces.ts
src/i18n/: i18n.d.ts  i18n.test.ts  index.ts
src/i18n/locales/en/: common.json  settings.json
src/i18n/locales/zh/: common.json  settings.json
src/services/: dragDrop.ts
src/styles/: themes.dark.css  themes.light.css
src/test/: vitest.setup.ts
