[package]
name = "codex-monitor"
version = "0.7.69"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "codex-monitor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codex_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-liquid-glass = "0.1"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "net", "io-util", "process", "rt", "sync", "time", "macros"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
git2 = { version = "0.20.3", features = ["vendored-openssl", "vendored-libgit2"] }
base64 = "0.22"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
ignore = "0.4.25"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
libc = "0.2"
chrono = { version = "0.4", features = ["clock"] }
shell-words = "1.1"
toml_edit = "0.20.2"
sys-locale = "0.3"
tiny_http = "0.12"
tokio-stream = "0.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10.0"
tauri-plugin-window-state = "2"
cpal = "0.15"
# whisper-rs = "0.12"
sha2 = "0.10"
portable-pty = "0.8"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSAppearance", "NSResponder", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat"] }
block2 = "0.6"

[target."cfg(target_os = \"ios\")".dependencies]
objc2 = "0.6"

# [patch.crates-io]
# whisper-rs = { path = "local_dependencies/whisper-rs" }
